--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,8 @@ build
 _test-output
 cypress.zip
 .babel-cache
-cypress/e2e
+cypress/e2e/1-getting-started
+cypress/e2e/2-advanced-examples
 cypress/fixtures
 cypress/support
 
